Changes in javaGeom library

javaGeom-0.?.? (2008-??.??, rev. ???)

New features
- Conic2D implements Boundary2D
- added Domain2D.EMPTY_DOMAIN and Boundary2D.EMPTY_BOUNDARY

Regressions
- Shape2D does not inherit from java.awt.Shape anymore, reducing the number of
	methods for most classes
- removed useless classes:
	+ Disc2D, ParametricConic2D, HalfPlane2D
- removed obsolete methods:
	+ Polygon2D.getVerticesNumber()
	+ PointSet2D.getPointsNumber()
	+ Conic2D.getCartesianEquation()
- deprecate classes with doubtful use:
	+ Point2D.INFINITY_POINT

javaGeom-0.6.3 (2008-12-22, rev. 167)

New features
- instances of Domain2D can be complemented
- added methods to draw shapes:
	+ Curve2D.draw(),
	+ Boundary2D.fill(),  
	+ Domain2D.fill(), Domain2D.draw()
	+ Box2D.draw(), Box2D.fill()
	+ Point2D.draw(), PointSet2D.draw()
- implemented getWindingAngle() of EllipseArc2D, ParabolaArc2D
- added Polyline2D.getVertex() and Polygon2D.getVertex()
	
Regressions
- removed Shape2D.defaultClipWindow
- changed names of methods in polylines and polygons: 
	+ 'Points' -> 'Vertices'
	+ 'verticesNumber' -> 'vertexNumber'
- remove deprecated methods 
	+ getClippedShape in Point2D
- changed AffineTransform2D.getInverseTransform() to invert()

Bug fixes
- fixed projection on lines (!)
- fixed computation of curvature for quad and cubic splines
- fixed clipping of BoundaryPolyCurve2D
- fixed clipping of domains
- fixed clipping of inverse circle arcs

Coding


	
javaGeom-0.6.2 (2008-07-30, rev. 153)

New features:
geom2d:
- added QuadBezier2D
- added grid subpackage
- added Boundary2D.getDomain(): Domain2D

Bug fixes
geom2d:
- Many bug fixes in conics:
	+ fixed transform of Parabolas
	+ fixed transform and comparison of Ellipses
	+ fixed transform, clipping, computation of conic coefficients for Hyperbolas
	+ introduced construction of Ellipse from 2 focii
- Fixed clipping of boundaries

Coding
geom2d:
- introduced UnboundedShapeException, NonInvertibleTransformException